[package]
name = "text_game"
version = "0.1.0"
edition = "2021"
authors = ["Lauren Parker <lparker@g.hmc.edu>", "April Uzdavinis <auzdavinis@g.hmc.edu>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version="0.27.0", features = ["event-stream"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["rt", "macros", "time"] }
